--- a/enter.css
+++ b/enter.css
@@ -3,7 +3,7 @@ body{
 	
 }
 
-.section{	
+.main{	
 	display: flex;
 	width: 100%;
 	height: 100%;
@@ -95,4 +95,27 @@ body{
 	top: -18px;
     font-size:12px;
     color: #6f8ee8;
+}
+
+@media screen and (max-width: 414px){
+.form{	
+	position: relative;
+	z-index: 1;
+	width: 300px;
+	height: 400px;
+	padding: 32px;
+	margin-top: 150px;
+	border-radius: 30px;
+	box-shadow: 0 3px 90px #ccc;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	background: linear-gradient(to top left, powderblue, pink);
+}
+.maintext{
+	text-align: center;
+	margin: 0px 5px 15px 5px;
+	font-weight: normal;
+	font-family: sans-serif;	
+
+}
 }
