--- a/enter.css
+++ b/enter.css
@@ -97,7 +97,7 @@ body{
     color: #6f8ee8;
 }
 
-@media screen and (max-width: 414px){
+@media screen and (max-device-width: 414px){
 .form{	
 	position: relative;
 	z-index: 1;
@@ -119,3 +119,42 @@ body{
 
 }
 }
+
+@media screen and (max-device-width: 736px){
+.form{	
+	position: relative;
+	z-index: 1;
+	width: 400px;
+	height: 300px;
+	padding: 32px;
+	margin-top: 25px;
+	border-radius: 30px;
+	box-shadow: 0 3px 90px #ccc;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	background: linear-gradient(to top left, powderblue, pink);
+}
+.maintext{
+	text-align: center;
+	margin: 0px 5px 15px 5px;
+	font-weight: normal;
+	font-family: sans-serif;	
+
+}
+.button{
+	display: block;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 50px;
+	font-family: sans-serif;
+	letter-spacing: 1px;
+	font-size: 16px;
+	color :#fff;
+	background-color: #0071f0;
+	outline: none;
+	cursor: pointer;	
+	margin:0 auto;
+	margin-top: 10px
+}
+}
+
