--- a/enter.css
+++ b/enter.css
@@ -120,7 +120,7 @@ body{
 }
 }
 
-@media screen and (max-device-width: 736px){
+@media screen and (min-device-width: 735px){
 .form{	
 	position: relative;
 	z-index: 1;
